v3.7.11 (XXXX-XX-XX)
--------------------

* Fix a crash caused by returning a result produced by ANALYZER function.

* Fix implicit capture of views in a context of JS transaction.

* Use RebootTracker to abort cluster transactions on DB servers should the
  originating coordinator die or be rebooted. The previous implementation left
  the coordinator's transactions open on DB servers until they timed out there.
  Now, the coordinator's unavailability or reboot will be detected as early as
  it is reported by the agency, and all open transactions from that coordinator
  will be auto-aborted on DB servers.

* Fix an assertion failure that occurred when restoring view definitions from a
  cluster into a single server.

* Fixed Github issue #13665: Improve index selection when there are multiple
  candidate indexes.

* Allow process-specific logfile names.

  This change allows replacing '$PID' with the current process id in the
  `--log.output` and `--audit.output` startup parameters.
  This way it is easier to write process-specific logfiles.

* Backport a bugfix from upstream RocksDB for opening encrypted files with small
  sizes. Without the bugfix, the server may run into assertion failures during
  recovery.

* When dropping a collection or an index with a larger amount of documents, the
  key range for the collection/index in RocksDB gets compacted. Previously, the
  compaction was running in foreground and thus would block the deletion
  operations.
  Now, the compaction is running in background, so that the deletion operations
  can return earlier.
  The maximum number of compaction jobs that are executed in background can be
  configured using the new startup parameter
  `--rocksdb.max-parallel-compactions`, which defaults to 2.

* Fix slower-than-necessary arangoimport behavior:
  arangoimport has a built-in rate limiter, which can be useful for importing
  data with a somewhat constant rate. However, it is enabled by default and