@@ -34,6 +34,10 @@
 #include <fuerte/types.h>
 #include <v8.h>
 
+#include <memory>
+#include <string>
+#include <unordered_map>
+
 namespace arangodb {
 class ClientFeature;
 
@@ -153,6 +157,7 @@ class V8ClientConnection {
     _lastHttpReturnCode = httpCode;
     _lastErrorMessage = msg;
   }
+
  private:
   application_features::ApplicationServer& _server;
   ClientFeature& _client;
@@ -173,6 +178,13 @@ class V8ClientConnection {
   velocypack::Options _vpackOptions;
   bool _forceJson;
   bool _setCustomError;
+
+  // a per-endpoint, per-user cache for connections. whenever we reconnect
+  // to another endpoint, we can put the old connection into this cache,
+  // and recycle it later. the goal is to not use too many separate connections
+  // and ephemeral ports for patterns such as "connect-to-leader" -> "connect-to-follower"
+  // -> "connect-to-leader" etc. 
+  std::unordered_map<std::string, std::shared_ptr<fuerte::Connection>> _connectionCache;
 };
 }  // namespace arangodb
 
