@@ -1,6 +1,14 @@
 v3.7.11 (XXXX-XX-XX)
 --------------------
 
+* When using connections to multiple endpoints and switching between them,
+  arangosh can now reuse existing connections by referring to an internal
+  connection cache. This helps for arangosh scripts that repeatedly connect to
+  multiple endpoints, and avoids wasting lots of ephemeral TCP ports remaining
+  in CLOSE_WAIT state.
+  This change is transparent to any arangosh scripts or commands that do not
+  reconnect to other endpoints than the one specified at arangosh start.
+
 * Fix a crash caused by returning a result produced by ANALYZER function.
 
 * Fix implicit capture of views in a context of JS transaction.
